package architectoryHW6.bridge.colors;

interface Color {
    void color();
}