package architectoryHW6.bridge.colors;

import architectoryHW6.bridge.Color;

public class Red implements Color {
    @Override
    public void color() {
        System.out.println("red");
    }
}